feat: Agregar el controlador de categoria y modificar el empleado, menu y producto.